<resources>
    <string name="app_name">MHchat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="private_message">Private Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="support">Support</string>
    <string name="title_activity_group">GroupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="btn_advance">Advance (Auth)</string>
    <string name="btn_basic">Basic (No Auth)</string>
    <string name="btn_push">Push</string>
    <string name="btn_remove_value">removeValue</string>
    <string name="btn_set_value">setValue</string>
    <string name="btn_update_children">updateChildren</string>
    <string name="fail_read">Failed to read value: %s</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_title">Title</string>
    <string name="hint_body">Write your post…</string>
    <string name="hint_username">Username…</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_logout">Log out</string>
    <string name="post">Post</string>
    <string name="send">SEND</string>
    <string name="required">Required</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Current username: %s \n\n</string>
    <string name="view_all">View All</string>
    <string name="add_new">Add New</string>

    <string-array name="headings">
        <item>Recent</item>
        <item>My Posts</item>
        <item>My Top Posts</item>
    </string-array>
</resources>