<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/wallpaper_gradient_dark"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.example.mhchat.ui.SignInActivity">

	<ImageView
		android:id="@+id/icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
		android:contentDescription="@string/app_name"
		android:src="@drawable/MHlogo"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<LinearLayout
		android:id="@+id/layout_email_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_marginTop="40dp"
		android:orientation="horizontal"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/icon"
		app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

		<EditText
			android:id="@+id/field_email"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hint="@string/hint_email"
			android:inputType="textEmailAddress"
			android:maxLines="1"
			android:textColor="#FFFFFF"
			android:textSize="24sp"/>

		<EditText
			android:id="@+id/field_password"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hint="@string/hint_password"
			android:inputType="textPassword"
			android:maxLines="1"
			android:textColor="#FFFFFF"
			android:textSize="24sp"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/linearLayout2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="80dp"
		android:orientation="horizontal"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/layout_email_password">

		<Button
			android:id="@+id/button_sign_in"
			style="?android:attr/button"
			android:background="@drawable/wallpaper_gradient"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sign_in"
			android:textSize="24sp"/>

		<Button
			android:id="@+id/button_sign_up"
			style="?android:attr/button"
			android:background="@drawable/wallpaper_gradient"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sign_up"
			android:textSize="24sp"/>

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>